test gc settings